<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_title_length">Password Length</string>
    <string name="app_name">Graphical Passwords</string>
    <string name="intro">This App contains the following 2 Graphical Password Schemes : </string>
    <string name="intro_attention"> </string>
    <string name="action_settings">Settings</string>
    <string name="btn_create_password">Create Password</string>
    <string name="btn_enter_password">Enter Password</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_done">Done</string>
    <string name="btn_clearall">Clear all</string>
    <string name="btn_undo">Undo</string>
    <string name="msg_pw_correct">Password Correct!</string>
    <string name="msg_pw_wrong">Incorrect Password! Enter Again</string>
    <string name="label_input">Input : </string>
    <string name="label_round">Round</string>
    <string name="title_activity_miba">OPEN MIBA</string>
    <string name="title_activity_miba_create_password">Open MIBA: Create Password</string>
    <string name="title_activity_miba_login">Open MIBA: Enter Password</string>
    <string name="title_dialog_miba_createpw">Select Gestures</string>
    <string name="msg_dialog_miba_createpw">Please Select Your Multitouch Gestures. One Gesture can have up to 4 rectangles. You can Insert a Shift Round with a Long Touch. Your password has to contain %d Rounds.</string>
    <string name="title_dialog_miba_rememberpw">Please Memorize Your Gestures : </string>
    <string name="title_activity_pass_go">OPEN PASS-GO</string>
    <string name="title_activity_pass_go_create_password">Open Pass-Go: Create Password</string>
    <string name="title_activity_pass_go_login">Open Pass-Go: Enter Password</string>
    <string name="title_dialog_pass_go_createpw">Select Pattern</string>
    <string name="msg_dialog_pass_go_createpw">Please Draw Your Desired Pattern. Your Pattern must contain %d Line Segments and / or Dots.</string>
    <string name="msg_dialog_pass_go_deletepattern">Would You Like to Delete the Pattern?</string>
    <string name="title_dialog_pass_go_rememberpw">Please Memorize the Pattern : </string>
    <string name="created_by">This App is Created by : </string>
    <string name="paper_references">This Implementation is Based on : </string>
    <string name="paper_pass_go">Tao, Hai. Pass-Go, a new graphical password scheme. Diss. University of Ottawa (Canada), 2006.</string>
    <string name="paper_miba">Ritter, Daniel, et al. \" Miba: Multitouch image based authentication on smartphones. \" CHI \'13 Extended Abstracts on Human Factors in Computing Systems. 2013.</string>
    <string name="creator_info">Group ID : AY21SECSM40113, 42 Saitwadekar Valay Angar, 48 Singh Anuj Pravin, 51 Singh Riya Rakesh, 54 Tiwari Etty Rajendra </string>
    <string name="title_activity_miba_settings">Open MIBA: Settings</string>
    <string name="pref_header_miba">Open MIBA</string>
    <string name="title_activity_pass_go_settings">Open Pass-Go: Settings</string>
    <string name="pref_header_passgo">Open Pass-Go</string>
</resources>