<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/intro" />
    <TextView
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_attention"
        android:layout_below="@+id/textView1"/>
    <TextView
        android:id="@+id/paper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator_info"
        android:layout_alignParentBottom="true"/>
    <TextView
        android:textStyle="bold"
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_by"
        android:layout_above="@+id/paper"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/miba"
                android:onClick="startMIBA"
                android:text="@string/title_activity_miba"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:elevation="2dp"
                android:layout_height="37dp"
                android:background="@drawable/mainbuttons"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/passgo"
                android:onClick="startPassGo"
                android:text="@string/title_activity_pass_go"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:elevation="2dp"
                android:layout_height="37dp"
                android:background="@drawable/mainbuttons"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>